--- a/singleProduct.html
+++ b/singleProduct.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecommerce-Samir Wagle</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/product.css">
-    <link rel="stylesheet" href="css/singleProduct.css">
-    <link rel="stylesheet" href="css/responsiveStyles.css">
     <script src="https://kit.fontawesome.com/18e31dbed1.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -72,7 +69,7 @@
                     <option>Small</option>
                 </select>
                 <input type="number" value="1">
-                <button>Add To Cart</button>
+                <button onclick="addToCart('Gucci Summer Vibe T-Shirts', 1099, 'f1.jpg')">Add To Cart</button>
                 <h4>Details</h4>
                 <p>
                     Discover the ultimate summer shirt to beat the heat in style! Our collection offers a range of lightweight and breathable fabrics, perfect for those sunny days. Whether you prefer button-downs or relaxed tees, our shirts are designed for both comfort and fashion. Stay cool and fashionable this summer with our must-have shirt collection. Explore our website and find your perfect summer style today!
