--- a/products.html
+++ b/products.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecommerce-Samir Wagle</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/product.css">
     <link rel="stylesheet" href="css/responsiveStyles.css">
     <script src="https://kit.fontawesome.com/18e31dbed1.js" crossorigin="anonymous"></script>
 </head>
@@ -55,7 +54,8 @@
                     </div>
                     <h4>RS.1099</h4>
                 </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+                    <a href="#"><i class="fa-solid fa-cart-shopping cart" onclick="addToCart('Gucci Summer Vibe T-Shirts', 1099, 'f1.jpg')"></i></a>
+
             </div>
             
             <div class="product">
